# driggsby-cli

./: .gitattributes  AGENTS.md  Cargo.toml  Justfile  README.md  dist-workspace.toml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.cargo/: audit.toml
.github/workflows/: pr-security.yml  release.yml  security-background.yml
crates/driggsby-cli/: Cargo.toml  README.md
crates/driggsby-cli/src/: main.rs  user_guidance.rs
crates/driggsby-cli/src/auth/: browser.rs  login.rs  oauth.rs  url_security.rs
crates/driggsby-cli/src/broker/: client.rs  daemon.rs  file_secret_store.rs  grants.rs  installation.rs  keyring_secret_store.rs  launch.rs  local_lock.rs  mod.rs  public_error.rs  remote_mcp.rs  remote_mcp_tests.rs  remote_session.rs  resolve_secret_store.rs  secrets.rs  server.rs  server_tests.rs  session.rs  types.rs
crates/driggsby-cli/src/cli/: client_config_cleanup.rs  client_id.rs  commands.rs  connect.rs  connect_session.rs  desktop_mcp_config.rs  format.rs  known_client.rs  mod.rs  supported_mcp_config.rs
crates/driggsby-cli/src/cli/connect/: tests.rs
crates/driggsby-cli/src/shim/: mod.rs
npm/driggsby/: README.md  install.ts  package.json  run-driggsby.ts
npm/driggsby/lib/: artifacts.ts  process.ts
scripts/release/: check-npm-publish-surface.ts  install-cargo-dist.sh  npm-package-behavior-check.ts  pack-npm-package.ts  sign-notarize-macos-artifacts.sh  test-sign-notarize-macos-artifacts.sh
