[workspace]
members = ["crates/driggsby-cli"]
default-members = ["crates/driggsby-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94"
version = "0.1.33"
repository = "https://github.com/thegoodsoftwareco/driggsby-cli"
license = "Apache-2.0"

[profile.dev]
debug = 0

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
tokio = { version = "1.51.1", features = ["macros", "process", "rt-multi-thread", "time"] }
