[package]
name = "driggsby"
description = "Local MCP broker and CLI for connecting AI clients to Driggsby"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true
publish = false
readme = "README.md"
license.workspace = true

[[bin]]
name = "driggsby"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
jsonwebtoken.workspace = true
keyring.workspace = true
open.workspace = true
p256.workspace = true
rand.workspace = true
reqwest.workspace = true
rmcp.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
